PA3/cool.output
Nonterminals useless in grammar

    error_msg


Terminals unused in grammar

    ERROR


State 132 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' cool_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' cool_feature_list '}' ';'
    6      | CLASS error '{' error '}' ';'

    7 cool_feature_list: ε
    8                  | feature cool_feature_list
    9                  | feature error

   10 feature: OBJECTID ':' TYPEID ';'
   11        | OBJECTID ':' TYPEID ASSIGN expression ';'
   12        | OBJECTID '(' formals_list ')' ':' TYPEID '{' expression '}' ';'

   13 formals_list: ε
   14             | formal
   15             | formals_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 expression: OBJECTID ASSIGN expression
   18           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression '.' OBJECTID '(' expression_list ')'
   20           | OBJECTID '(' expression_list ')'
   21           | IF expression THEN expression ELSE expression FI
   22           | WHILE expression LOOP expression POOL
   23           | '{' expression_list_no_empty '}'
   24           | LET OBJECTID ':' TYPEID ASSIGN expression let_list
   25           | LET OBJECTID ':' TYPEID let_list
   26           | CASE expression OF case_list ESAC
   27           | NEW TYPEID
   28           | ISVOID expression
   29           | expression '+' expression
   30           | expression '-' expression
   31           | expression '*' expression
   32           | expression '/' expression
   33           | '~' expression
   34           | expression '<' expression
   35           | expression LE expression
   36           | expression '=' expression
   37           | NOT expression
   38           | '(' expression ')'
   39           | OBJECTID
   40           | INT_CONST
   41           | STR_CONST
   42           | boolean
   43           | '{' error '}'

   44 expression_list: ε
   45                | expression
   46                | expression_list ',' expression

   47 expression_list_no_empty: expression ';'
   48                         | expression_list_no_empty expression ';'

   49 case_: OBJECTID ':' TYPEID DARROW expression

   50 case_list: ε
   51          | case_
   52          | case_list ',' case_

   53 let_list: ',' OBJECTID ':' TYPEID ASSIGN expression let_list
   54         | ',' OBJECTID ':' TYPEID let_list
   55         | IN expression
   56         | error let_list

   57 boolean: BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 12 18 19 20 38
    ')' (41) 12 18 19 20 38
    '*' (42) 31
    '+' (43) 29
    ',' (44) 15 46 52 53 54
    '-' (45) 30
    '.' (46) 18 19
    '/' (47) 32
    ':' (58) 10 11 12 16 24 25 49 53 54
    ';' (59) 4 5 6 10 11 12 47 48
    '<' (60) 34
    '=' (61) 36
    '@' (64) 18
    '{' (123) 4 5 6 12 23 43
    '}' (125) 4 5 6 12 23 43
    '~' (126) 33
    error (256) 6 9 43 56
    CLASS (258) 4 5 6
    ELSE (259) 21
    FI (260) 21
    IF (261) 21
    IN (262) 55
    INHERITS (263) 5
    LET (264) 24 25
    LOOP (265) 22
    POOL (266) 22
    THEN (267) 21
    WHILE (268) 22
    CASE (269) 26
    ESAC (270) 26
    OF (271) 26
    DARROW (272) 49
    NEW (273) 27
    ISVOID (274) 28
    STR_CONST <symbol> (275) 41
    INT_CONST <symbol> (276) 40
    BOOL_CONST <boolean> (277) 57
    TYPEID <symbol> (278) 4 5 10 11 12 16 18 24 25 27 49 53 54
    OBJECTID <symbol> (279) 10 11 12 16 17 18 19 20 24 25 39 49 53 54
    ASSIGN (280) 11 17 24 53
    NOT (281) 37
    LE (282) 35
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    cool_feature_list <features> (49)
        on left: 7 8 9
        on right: 4 5 8
    feature <feature> (50)
        on left: 10 11 12
        on right: 8 9
    formals_list <formals> (51)
        on left: 13 14 15
        on right: 12 15
    formal <formal> (52)
        on left: 16
        on right: 14 15
    expression <expression> (53)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 11 12 17 18 19 21 22 24 26 28 29 30 31 32 33 34 35 36 37 38 45 46 47 48 49 53 55
    expression_list <expressions> (54)
        on left: 44 45 46
        on right: 18 19 20 46
    expression_list_no_empty <expressions> (55)
        on left: 47 48
        on right: 23 48
    case_ <case_> (56)
        on left: 49
        on right: 51 52
    case_list <cases> (57)
        on left: 50 51 52
        on right: 26 52
    let_list <expression> (58)
        on left: 53 54 55 56
        on right: 24 25 53 54 56
    boolean <boolean> (59)
        on left: 57
        on right: 42


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS • TYPEID '{' cool_feature_list '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' cool_feature_list '}' ';'
    6      | CLASS • error '{' error '}' ';'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program • $end

    $end  shift, and go to state 7


State 3

    1 program: class_list •
    3 class_list: class_list • class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 5

    6 class: CLASS error • '{' error '}' ';'

    '{'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID • '{' cool_feature_list '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' cool_feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end •

    $default  accept


State 8

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS error '{' • error '}' ';'

    error  shift, and go to state 12


State 10

    5 class: CLASS TYPEID INHERITS • TYPEID '{' cool_feature_list '}' ';'

    TYPEID  shift, and go to state 13


State 11

    4 class: CLASS TYPEID '{' • cool_feature_list '}' ';'

    OBJECTID  shift, and go to state 14

    $default  reduce using rule 7 (cool_feature_list)

    cool_feature_list  go to state 15
    feature            go to state 16


State 12

    6 class: CLASS error '{' error • '}' ';'

    '}'  shift, and go to state 17


State 13

    5 class: CLASS TYPEID INHERITS TYPEID • '{' cool_feature_list '}' ';'

    '{'  shift, and go to state 18


State 14

   10 feature: OBJECTID • ':' TYPEID ';'
   11        | OBJECTID • ':' TYPEID ASSIGN expression ';'
   12        | OBJECTID • '(' formals_list ')' ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 19
    '('  shift, and go to state 20


State 15

    4 class: CLASS TYPEID '{' cool_feature_list • '}' ';'

    '}'  shift, and go to state 21


State 16

    8 cool_feature_list: feature • cool_feature_list
    9                  | feature • error

    error     shift, and go to state 22
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (cool_feature_list)

    cool_feature_list  go to state 23
    feature            go to state 16


State 17

    6 class: CLASS error '{' error '}' • ';'

    ';'  shift, and go to state 24


State 18

    5 class: CLASS TYPEID INHERITS TYPEID '{' • cool_feature_list '}' ';'

    OBJECTID  shift, and go to state 14

    $default  reduce using rule 7 (cool_feature_list)

    cool_feature_list  go to state 25
    feature            go to state 16


State 19

   10 feature: OBJECTID ':' • TYPEID ';'
   11        | OBJECTID ':' • TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 26


State 20

   12 feature: OBJECTID '(' • formals_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 27

    $default  reduce using rule 13 (formals_list)

    formals_list  go to state 28
    formal        go to state 29


State 21

    4 class: CLASS TYPEID '{' cool_feature_list '}' • ';'

    ';'  shift, and go to state 30


State 22

    9 cool_feature_list: feature error •

    $default  reduce using rule 9 (cool_feature_list)


State 23

    8 cool_feature_list: feature cool_feature_list •

    $default  reduce using rule 8 (cool_feature_list)


State 24

    6 class: CLASS error '{' error '}' ';' •

    $default  reduce using rule 6 (class)


State 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' cool_feature_list • '}' ';'

    '}'  shift, and go to state 31


State 26

   10 feature: OBJECTID ':' TYPEID • ';'
   11        | OBJECTID ':' TYPEID • ASSIGN expression ';'

    ASSIGN  shift, and go to state 32
    ';'     shift, and go to state 33


State 27

   16 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 34


State 28

   12 feature: OBJECTID '(' formals_list • ')' ':' TYPEID '{' expression '}' ';'
   15 formals_list: formals_list • ',' formal

    ')'  shift, and go to state 35
    ','  shift, and go to state 36


State 29

   14 formals_list: formal •

    $default  reduce using rule 14 (formals_list)


State 30

    4 class: CLASS TYPEID '{' cool_feature_list '}' ';' •

    $default  reduce using rule 4 (class)


State 31

    5 class: CLASS TYPEID INHERITS TYPEID '{' cool_feature_list '}' • ';'

    ';'  shift, and go to state 37


State 32

   11 feature: OBJECTID ':' TYPEID ASSIGN • expression ';'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 52
    boolean     go to state 53


State 33

   10 feature: OBJECTID ':' TYPEID ';' •

    $default  reduce using rule 10 (feature)


State 34

   16 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 54


State 35

   12 feature: OBJECTID '(' formals_list ')' • ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 55


State 36

   15 formals_list: formals_list ',' • formal

    OBJECTID  shift, and go to state 27

    formal  go to state 56


State 37

    5 class: CLASS TYPEID INHERITS TYPEID '{' cool_feature_list '}' ';' •

    $default  reduce using rule 5 (class)


State 38

   21 expression: IF • expression THEN expression ELSE expression FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 57
    boolean     go to state 53


State 39

   24 expression: LET • OBJECTID ':' TYPEID ASSIGN expression let_list
   25           | LET • OBJECTID ':' TYPEID let_list

    OBJECTID  shift, and go to state 58


State 40

   22 expression: WHILE • expression LOOP expression POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 59
    boolean     go to state 53


State 41

   26 expression: CASE • expression OF case_list ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 60
    boolean     go to state 53


State 42

   27 expression: NEW • TYPEID

    TYPEID  shift, and go to state 61


State 43

   28 expression: ISVOID • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 62
    boolean     go to state 53


State 44

   41 expression: STR_CONST •

    $default  reduce using rule 41 (expression)


State 45

   40 expression: INT_CONST •

    $default  reduce using rule 40 (expression)


State 46

   57 boolean: BOOL_CONST •

    $default  reduce using rule 57 (boolean)


State 47

   17 expression: OBJECTID • ASSIGN expression
   20           | OBJECTID • '(' expression_list ')'
   39           | OBJECTID •

    ASSIGN  shift, and go to state 63
    '('     shift, and go to state 64

    $default  reduce using rule 39 (expression)


State 48

   37 expression: NOT • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 65
    boolean     go to state 53


State 49

   33 expression: '~' • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 66
    boolean     go to state 53


State 50

   23 expression: '{' • expression_list_no_empty '}'
   43           | '{' • error '}'

    error       shift, and go to state 67
    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression                go to state 68
    expression_list_no_empty  go to state 69
    boolean                   go to state 53


State 51

   38 expression: '(' • expression ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 70
    boolean     go to state 53


State 52

   11 feature: OBJECTID ':' TYPEID ASSIGN expression • ';'
   18 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   29           | expression • '+' expression
   30           | expression • '-' expression
   31           | expression • '*' expression
   32           | expression • '/' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression

    LE   shift, and go to state 71
    '.'  shift, and go to state 72
    '@'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79
    ';'  shift, and go to state 80


State 53

   42 expression: boolean •

    $default  reduce using rule 42 (expression)


State 54

   16 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 16 (formal)


State 55

   12 feature: OBJECTID '(' formals_list ')' ':' • TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 81


State 56

   15 formals_list: formals_list ',' formal •

    $default  reduce using rule 15 (formals_list)


State 57

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   21           | IF expression • THEN expression ELSE expression FI
   29           | expression • '+' expression
   30           | expression • '-' expression
   31           | expression • '*' expression
   32           | expression • '/' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression

    THEN  shift, and go to state 82
    LE    shift, and go to state 71
    '.'   shift, and go to state 72
    '@'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '<'   shift, and go to state 78
    '='   shift, and go to state 79


State 58

   24 expression: LET OBJECTID • ':' TYPEID ASSIGN expression let_list
   25           | LET OBJECTID • ':' TYPEID let_list

    ':'  shift, and go to state 83


State 59

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   22           | WHILE expression • LOOP expression POOL
   29           | expression • '+' expression
   30           | expression • '-' expression
   31           | expression • '*' expression
   32           | expression • '/' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression

    LOOP  shift, and go to state 84
    LE    shift, and go to state 71
    '.'   shift, and go to state 72
    '@'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '<'   shift, and go to state 78
    '='   shift, and go to state 79


State 60

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   26           | CASE expression • OF case_list ESAC
   29           | expression • '+' expression
   30           | expression • '-' expression
   31           | expression • '*' expression
   32           | expression • '/' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression

    OF   shift, and go to state 85
    LE   shift, and go to state 71
    '.'  shift, and go to state 72
    '@'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79


State 61

   27 expression: NEW TYPEID •

    $default  reduce using rule 27 (expression)


State 62

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   28           | ISVOID expression •
   29           | expression • '+' expression
   30           | expression • '-' expression
   31           | expression • '*' expression
   32           | expression • '/' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression

    LE   shift, and go to state 71
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79

    $default  reduce using rule 28 (expression)


State 63

   17 expression: OBJECTID ASSIGN • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 86
    boolean     go to state 53


State 64

   20 expression: OBJECTID '(' • expression_list ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    $default  reduce using rule 44 (expression_list)

    expression       go to state 87
    expression_list  go to state 88
    boolean          go to state 53


State 65

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   29           | expression • '+' expression
   30           | expression • '-' expression
   31           | expression • '*' expression
   32           | expression • '/' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression
   37           | NOT expression •

    $default  reduce using rule 37 (expression)


State 66

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   29           | expression • '+' expression
   30           | expression • '-' expression
   31           | expression • '*' expression
   32           | expression • '/' expression
   33           | '~' expression •
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression

    LE   shift, and go to state 71
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79

    $default  reduce using rule 33 (expression)


State 67

   43 expression: '{' error • '}'

    '}'  shift, and go to state 89


State 68

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   29           | expression • '+' expression
   30           | expression • '-' expression
   31           | expression • '*' expression
   32           | expression • '/' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression
   47 expression_list_no_empty: expression • ';'

    LE   shift, and go to state 71
    '.'  shift, and go to state 72
    '@'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79
    ';'  shift, and go to state 90


State 69

   23 expression: '{' expression_list_no_empty • '}'
   48 expression_list_no_empty: expression_list_no_empty • expression ';'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '}'         shift, and go to state 91
    '('         shift, and go to state 51

    expression  go to state 92
    boolean     go to state 53


State 70

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   29           | expression • '+' expression
   30           | expression • '-' expression
   31           | expression • '*' expression
   32           | expression • '/' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression
   38           | '(' expression • ')'

    LE   shift, and go to state 71
    '.'  shift, and go to state 72
    '@'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79
    ')'  shift, and go to state 93


State 71

   35 expression: expression LE • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 94
    boolean     go to state 53


State 72

   19 expression: expression '.' • OBJECTID '(' expression_list ')'

    OBJECTID  shift, and go to state 95


State 73

   18 expression: expression '@' • TYPEID '.' OBJECTID '(' expression_list ')'

    TYPEID  shift, and go to state 96


State 74

   31 expression: expression '*' • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 97
    boolean     go to state 53


State 75

   32 expression: expression '/' • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 98
    boolean     go to state 53


State 76

   29 expression: expression '+' • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 99
    boolean     go to state 53


State 77

   30 expression: expression '-' • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 100
    boolean     go to state 53


State 78

   34 expression: expression '<' • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 101
    boolean     go to state 53


State 79

   36 expression: expression '=' • expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 102
    boolean     go to state 53


State 80

   11 feature: OBJECTID ':' TYPEID ASSIGN expression ';' •

    $default  reduce using rule 11 (feature)


State 81

   12 feature: OBJECTID '(' formals_list ')' ':' TYPEID • '{' expression '}' ';'

    '{'  shift, and go to state 103


State 82

   21 expression: IF expression THEN • expression ELSE expression FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 104
    boolean     go to state 53


State 83

   24 expression: LET OBJECTID ':' • TYPEID ASSIGN expression let_list
   25           | LET OBJECTID ':' • TYPEID let_list

    TYPEID  shift, and go to state 105


State 84

   22 expression: WHILE expression LOOP • expression POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 106
    boolean     go to state 53


State 85

   26 expression: CASE expression OF • case_list ESAC

    OBJECTID  shift, and go to state 107

    $default  reduce using rule 50 (case_list)

    case_      go to state 108
    case_list  go to state 109


State 86

   17 expression: OBJECTID ASSIGN expression •
   18           | expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   29           | expression • '+' expression
   30           | expression • '-' expression
   31           | expression • '*' expression
   32           | expression • '/' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression

    $default  reduce using rule 17 (expression)


State 87

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   29           | expression • '+' expression
   30           | expression • '-' expression
   31           | expression • '*' expression
   32           | expression • '/' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression
   45 expression_list: expression •

    LE   shift, and go to state 71
    '.'  shift, and go to state 72
    '@'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79

    $default  reduce using rule 45 (expression_list)


State 88

   20 expression: OBJECTID '(' expression_list • ')'
   46 expression_list: expression_list • ',' expression

    ')'  shift, and go to state 110
    ','  shift, and go to state 111


State 89

   43 expression: '{' error '}' •

    $default  reduce using rule 43 (expression)


State 90

   47 expression_list_no_empty: expression ';' •

    $default  reduce using rule 47 (expression_list_no_empty)


State 91

   23 expression: '{' expression_list_no_empty '}' •

    $default  reduce using rule 23 (expression)


State 92
